# mattermost-desktop-app

./: .editorconfig  App.re  README.md  package.json
esy.lock/: index.json
src/: App.re  Client.re  User.re  dune
